--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^16.11.35",
+    "angular-cli-ghpages": "^2.0.1",
     "copyfiles": "^2.4.1",
     "jasmine-core": "~5.3.0",
     "jasmine-marbles": "~0.9.2",
